<resources>

    <string name="app_name">Appvet</string>
    <string name="file_provider">br.com.aonsistemas.appvet.fileprovider</string>
    <string name="description_image">image</string>
    <string name="pipe">|</string>
    <string name="settings">Configuration</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="customer_service">Customer Service</string>
    <string name="customer_service_item">Service - Item</string>
    <string name="add_client">Customer Registration</string>
    <string name="add_animal">Animal Registration</string>
    <string name="add_product">Product/Service Registration</string>
    <string name="report_print">Report</string>
    <string name="show_pdf">PDF file</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="telephone">Phone</string>
    <string name="email">Email</string>
    <string name="unity">Unit</string>
    <string name="value">Value $</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="client">Client</string>
    <string name="animal">Animal</string>
    <string name="product_service">Product/Service</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="last_date">End Date</string>
    <string name="date_customer_service">Customer service date</string>
    <string name="products_services">Products/Services</string>
    <string name="total">TOTAL:</string>
    <string name="zero">0,00</string>
    <string name="zero_us">0.00</string>
    <string name="value_item">Value</string>
    <string name="amount_item">Qty</string>
    <string name="total_item">Total</string>
    <string name="key">Activation key</string>
    <string name="business_name">Business Name</string>
    <string name="contact">Contact</string>
    <string name="logo">Logo</string>
    <string name="size_logo">Logo (Ideal size 190x102px)</string>
    <string name="send_to">Send by Appvet</string>
    <string name="alter">Change</string>
    <string name="delete">Delete</string>
    <string name="show_animals">View Animal(s)</string>
    <string name="send_mail">Send email</string>
    <string name="call">Call</string>

    <string name="btn_attendance">ATTENDANCE</string>
    <string name="btn_client">CUSTOMERS</string>
    <string name="btn_animal">ANIMALS</string>
    <string name="btn_product">PRODUCTS/SERVICES</string>
    <string name="btn_report">REPORT</string>
    <string name="btn_generate_report">GENERATE REPORT</string>
    <string name="btn_load_logo">LOAD IMAGE</string>
    <string name="btn_delete_logo">DELETE IMAGE</string>
    <string name="btn_selection">Click to select</string>
    <string name="show_last_report">VIEW LAST REPORT GENERATED</string>

    <string name="menu_add">Add</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_report">Report</string>

    <string name="speaker_name">Enter name</string>
    <string name="speaker_address">Enter address</string>
    <string name="speaker_telephone">Enter phone number</string>
    <string name="speaker_email">Enter email</string>
    <string name="speaker_description">Enter description</string>
    <string name="speaker_unity">Enter unit</string>
    <string name="speaker_value">Enter the value</string>
    <string name="speaker_note">Enter note</string>
    <string name="speaker_customer_service_date">Customer service date</string>
    <string name="speaker_amount">Enter quantity</string>
    <string name="speaker_total">Enter the total</string>
    <string name="speaker_key">Enter activation key</string>
    <string name="speaker_business_name">Enter the business name</string>
    <string name="speaker_contact">Enter contact</string>

    <string name="txt_animals_client">Client Animals</string>
    <string name="txt_sel_animals">Select the animal</string>
    <string name="txt_sel_client">Select Client</string>
    <string name="txt_product_service">Select product/service</string>
    <string name="txt_sel_image">Select Image</string>
    <string name="txt_name_animal_client">Enter the name of the animal/client</string>
    <string name="txt_description_product">Enter product/service description</string>
    <string name="txt_options">Options</string>
    <string name="txt_exit">Do you want to shut down the system?</string>
    <string name="txt_del_animal">Confirm the deletion of the animal</string>
    <string name="txt_excluded_animal">Excluded animal!</string>
    <string name="txt_alter_animal">Animal changed!</string>
    <string name="txt_add_animal">Animal included!</string>
    <string name="txt_error_add_animal">An error occurred adding the animal</string>
    <string name="txt_error_excluded_animal">An error occurred while deleting the animal</string>
    <string name="txt_permission_excluded_animal">The exclusion of the animal is not allowed, as there is release with it.</string>
    <string name="txt_unexpected_value">unexpected value: </string>
    <string name="txt_check_inconsistencies">Dear customer, please check the inconsistency(s) below:</string>
    <string name="txt_check_date">- The date of service field is mandatory</string>
    <string name="txt_check_client">- The field Client is mandatory</string>
    <string name="txt_check_value">- The Value field is mandatory</string>
    <string name="txt_check_amount">- The Quantity field is mandatory</string>
    <string name="txt_check_product_service">- The Product/Service field is mandatory</string>
    <string name="txt_check_product_service_item">- No Product/Service was reported</string>
    <string name="txt_mandatory_client">Client not informed</string>
    <string name="txt_name_client">Enter client name</string>
    <string name="txt_delete_client">Confirm client deletion</string>
    <string name="txt_excluded_client">Excluded Client!</string>
    <string name="txt_alter_client">Client changed!</string>
    <string name="txt_add_client">Client added!</string>
    <string name="txt_error_add_client">An error occurred adding client</string>
    <string name="txt_error_excluded_client">There was an error deleting the client</string>
    <string name="txt_permission_excluded_client">Exclusion of the client is not allowed, as there is release with it.</string>
    <string name="txt_delete_customer_service">Confirm deletion of service</string>
    <string name="txt_error_excluded_customer_service">An error occurred while deleting the service</string>
    <string name="txt_excluded_customer_service">Service excluded!</string>
    <string name="txt_cancel_customer_service">Confirm service cancellation?</string>
    <string name="txt_alter_customer_service">Service changed!</string>
    <string name="txt_add_customer_service">Service included!</string>
    <string name="txt_error_add_customer_service">An error occurred while adding service</string>
    <string name="txt_delete_customer_service_item">Confirm item deletion</string>
    <string name="txt_excluded_customer_service_item">Excluded Item!</string>
    <string name="txt_delete_product">Confirm deletion of product/service</string>
    <string name="txt_permission_excluded_product">The exclusion of the product/service is not allowed, as there is release with it.</string>
    <string name="txt_error_excluded_product">There was an error deleting the product/service</string>
    <string name="txt_error_add_product">An error occurred adding product/service</string>
    <string name="txt_add_product">Product/Service Included!</string>
    <string name="txt_alter_product">Product/Service Changed!</string>
    <string name="txt_add_configurations">settings successfully changed</string>
    <string name="txt_error_add_configurations">There was an error saving the settings</string>
    <string name="txt_mandatory_name">The Name field is mandatory</string>
    <string name="txt_client_animal_note">Enter the name of the client/animal/note</string>
    <string name="txt_mandatory_description">The Description field is mandatory</string>
    <string name="txt_invalid_value">Value entered is not valid</string>
    <string name="txt_external_storage">The device does not have external storage</string>
    <string name="txt_not_search_customer_service">No service was found to generate the report</string>
    <string name="txt_not_create_folder">Could not create directory for file generation</string>
    <string name="txt_create_report_success">Report generated successfully</string>
    <string name="txt_create_report_error">Could not generate report</string>
    <string name="txt_report">CUSTOMER SERVICE REPORT</string>
    <string name="txt_total_client">TOTAL CUSTOMER</string>
    <string name="txt_total_general">GENERAL TOTAL</string>
    <string name="txt_error_load_image">Could not load image</string>
    <string name="txt_error_load_pdf">The pdf file was not found for viewing</string>
    <string name="txt_error_read_pdf">Could not read pdf file</string>
    <string name="txt_attachment">The attendance report is attached</string>
    <string name="txt_share_pdf">PDF file cannot be shared</string>
    <string name="txt_not_found_pdf">PDF file not found</string>
    <string name="txt_error_send_email">Unable to open the email sending app</string>
    <string name="txt_error_call">Unable to connect</string>

</resources>
