<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/txtDescKeySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtKeySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speaker_key"
        android:importantForAutofill="no"
        android:inputType="text|textCapCharacters"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtDescNameSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtNameSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speaker_business_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtDescAddressSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtAddressSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speaker_address"
        android:importantForAutofill="no"
        android:inputType="text|textCapWords"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtDescContactSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtContactSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speaker_contact"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/size_logo"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUploadImage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/btn_load_logo"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnClearImage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/btn_delete_logo"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="210dp"
            android:layout_height="115dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_image"
            android:scaleType="fitXY"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>
</LinearLayout>