<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CustomerServiceItemAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtDescProductItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products_services"
            android:textColor="@color/dark_grey" />

        <Button
            android:id="@+id/btnProductItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_click"
            android:gravity="center"
            android:hint="@string/btn_selection"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtDescValueItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_item"
            android:textColor="@color/dark_grey" />

        <EditText
            android:id="@+id/txtValueItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:hint="@string/speaker_value"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtDescAmountItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_item"
            android:textColor="@color/dark_grey" />

        <EditText
            android:id="@+id/txtAmountItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:hint="@string/speaker_amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDescTotalItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_item"
            android:textColor="@color/dark_grey" />

        <EditText
            android:id="@+id/txtTotalItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:hint="@string/speaker_total"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/zero" />

    </LinearLayout>
</LinearLayout>