<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".AnimalAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtDescClientAddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textColor="@color/dark_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClientAddAnimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_click"
                android:gravity="center"
                android:hint="@string/btn_selection"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imgClientAddAnimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_image"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:srcCompat="@drawable/ic_search" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/txtDescNameAddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/dark_grey" />

        <EditText
            android:id="@+id/txtNameAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/speaker_name"
            android:importantForAutofill="no"
            android:inputType="text|textCapWords"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>